# ssm

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  chat_api.py  main.py  pyproject.toml
.claude/: settings.local.json
agents/esp32/: agent_manifest.py  boot.py  bsm.py  config.py  ism.py  local_rules.py  main.py  mqtt_client.py  probe.py  trigger_map.py  upload.bat
agents/pc_agent/: .env  graph.py  main.py  output.txt  requirements.txt  shared_state.py  tools.py
agents/phone/: index.html  manifest.json  sw.js
app/: index.html  manifest.json  serve.py  sw.js
app/src/: AgentRegistry.js  ISMTracker.js  MqttBus.js  app.jsx  boot.js  config.js  main.js
app/styles/: app.css
broker/: mosquitto.conf  mosquitto.conf.tmpl  passwd
cloud/: .env  .env.example
cloud/api/: devices.py  main.py  nlu.py  rules.py
cloud/cards/: __init__.py  builder.py  registry.py  schema.py
cloud/esp32/: agent.py  paths.py  router.py  state.py  tools.py  tts.py
cloud/go2/: agent.py  connection.py  drive.py  episode_memory.py  navigator.py  occupancy_grid.py  paths.py  (+10 more)
docs/: AGENT_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  CONTROL_FLOW.md  TODO.md  WIRING.md
edge/: agent_manifest.py  bsm.py  config.py  ism.py  local_rules.py  main.py  mqtt_client.py  trigger_map.py
paper/: idea.txt  idea_v2.md  智慧空间交互体验趋势调研报告.md  智慧空间交互方式演进对比表.html
protocol/: identifiers.md  topics.md
server/: .env  .env.example  test_nvidia_model.py
test_script/: test_baidu_location.py  test_tencent_location.py
tools/: broker_start.bat  monitor.bat  pc_agent_start.bat  pwa_server.bat
(+121 files in other folders)
