[project]
name = "ssm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.28",
    "openai>=2.32.0",
    "paho-mqtt>=1.6.1,<2.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.46.0",
    "edge-tts>=6.1.0",
    "unitree-webrtc-connect>=2.1.2",
    "pillow>=12.2.0",
    "opencv-python-headless>=4.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
